import { mergeTypes } from './index';

describe('mergeTypes', () => {
  it('should merge types', () => {
    const types = [`type Test {id: ID}`, `type Test2 {id: ID}`];
    expect(mergeTypes(types)).toEqual(
      [
        `type Query`,
        ``,
        `type Test {`,
        `  id: ID`,
        `}`,
        ``,
        `type Test2 {`,
        `  id: ID`,
        `}`,
        ``,
      ].join('\n'),
    );
  });
  it('should work orderBy directive', () => {
    const types = [`type Test {id: ID}`, `type Test2 {tests: [Test] @orderBy}`];
    expect(mergeTypes(types)).toEqual(
      [
        `enum OrderDirection {`,
        `  ASC`,
        `  DESC`,
        `}`,
        ``,
        `type Query`,
        ``,
        `type Test {`,
        `  id: ID`,
        `}`,
        ``,
        `type Test2 {`,
        `  tests(orderBy: [TestOrder]): [Test]`,
        `}`,
        ``,
        `input TestOrder {`,
        `  sort: TestSort`,
        `  direction: OrderDirection`,
        `}`,
        ``,
        `enum TestSort {`,
        `  ID`,
        `}`,
        ``,
      ].join('\n'),
    );
  });
  it('should work where directive', () => {
    const types = [`type Test {id: ID}`, `type Test2 {tests: [Test] @where }`];
    expect(mergeTypes(types)).toEqual(
      [
        `input IDWhereOperator {`,
        `  type: IDWhereOperatorType!`,
        `  value: [ID]!`,
        `}`,
        ``,
        `enum IDWhereOperatorType {`,
        `  EQ`,
        `  NOT_EQ`,
        `  IN`,
        `  NOT_IN`,
        `}`,
        ``,
        `type Query`,
        ``,
        `type Test {`,
        `  id: ID`,
        `}`,
        ``,
        `type Test2 {`,
        `  tests(where: TestWhere): [Test]`,
        `}`,
        ``,
        `input TestWhere {`,
        `  id: [IDWhereOperator]`,
        `}`,
        ``,
      ].join('\n'),
    );
  });
  it('should work relay directive', () => {
    const types = [`type Test {id: ID}`, `type Test2 {tests: [Test] @relay }`];

    expect(mergeTypes(types)).toEqual(
      [
        `"""A connection for relay"""`,
        `interface Connection {`,
        `  """Identifies the total count of items in the connection."""`,
        `  totalCount: Int`,
        ``,
        `  """Information to aid in pagination."""`,
        `  pageInfo: PageInfo!`,
        ``,
        `  """A list of edges."""`,
        `  edges: [Edge]`,
        `}`,
        ``,
        `"""An edge in a connection."""`,
        `interface Edge {`,
        `  """A cursor for use in pagination."""`,
        `  cursor: String`,
        `}`,
        ``,
        `"""An object with an ID."""`,
        `interface Node {`,
        `  """ID of the object."""`,
        `  id: ID!`,
        `}`,
        ``,
        `"""Information about pagination in a connection."""`,
        `type PageInfo {`,
        `  """When paginating backwards, the cursor to continue."""`,
        `  startCursor: String`,
        ``,
        `  """When paginating forwards, the cursor to continue."""`,
        `  endCursor: String`,
        ``,
        `  """When paginating forwards, are there more items?"""`,
        `  hasNextPage: Boolean`,
        ``,
        `  """When paginating backwards, are there more items?"""`,
        `  hasPreviousPage: Boolean`,
        `}`,
        ``,
        `type Query`,
        ``,
        `type Test implements Node {`,
        `  id: ID`,
        `}`,
        ``,
        `type Test2 {`,
        `  tests(before: String, after: String, first: Int, last: Int): TestConnection`,
        `}`,
        ``,
        `"""The connection type for Test"""`,
        `type TestConnection implements Connection {`,
        `  """Identifies the total count of Test items in the connection."""`,
        `  totalCount: Int`,
        ``,
        `  """A list of TestEdge."""`,
        `  edges: [TestEdge]`,
        ``,
        `  """Information to aid in pagination."""`,
        `  pageInfo: PageInfo!`,
        `}`,
        ``,
        `"""An edge in a TestConnection."""`,
        `type TestEdge implements Edge {`,
        `  """The item at the end of the edge."""`,
        `  node: Test`,
        ``,
        `  """A cursor for use in pagination."""`,
        `  cursor: String`,
        `}`,
        ``,
      ].join('\n'),
    );
  });
  it('should work orderBy, where, and relay directive', () => {
    const types = [
      `type Test {id: ID}`,
      `type Test2 {tests: [Test] @orderBy @where @relay }`,
    ];
    expect(mergeTypes(types)).toEqual(
      [
        `"""A connection for relay"""`,
        `interface Connection {`,
        `  """Identifies the total count of items in the connection."""`,
        `  totalCount: Int`,
        ``,
        `  """Information to aid in pagination."""`,
        `  pageInfo: PageInfo!`,
        ``,
        `  """A list of edges."""`,
        `  edges: [Edge]`,
        `}`,
        ``,
        `"""An edge in a connection."""`,
        `interface Edge {`,
        `  """A cursor for use in pagination."""`,
        `  cursor: String`,
        `}`,
        ``,
        `input IDWhereOperator {`,
        `  type: IDWhereOperatorType!`,
        `  value: [ID]!`,
        `}`,
        ``,
        `enum IDWhereOperatorType {`,
        `  EQ`,
        `  NOT_EQ`,
        `  IN`,
        `  NOT_IN`,
        `}`,
        ``,
        `"""An object with an ID."""`,
        `interface Node {`,
        `  """ID of the object."""`,
        `  id: ID!`,
        `}`,
        ``,
        `enum OrderDirection {`,
        `  ASC`,
        `  DESC`,
        `}`,
        ``,
        `"""Information about pagination in a connection."""`,
        `type PageInfo {`,
        `  """When paginating backwards, the cursor to continue."""`,
        `  startCursor: String`,
        ``,
        `  """When paginating forwards, the cursor to continue."""`,
        `  endCursor: String`,
        ``,
        `  """When paginating forwards, are there more items?"""`,
        `  hasNextPage: Boolean`,
        ``,
        `  """When paginating backwards, are there more items?"""`,
        `  hasPreviousPage: Boolean`,
        `}`,
        ``,
        `type Query`,
        ``,
        `type Test implements Node {`,
        `  id: ID`,
        `}`,
        ``,
        `type Test2 {`,
        `  tests(orderBy: [TestOrder], where: TestWhere, before: String, after: String, first: Int, last: Int): TestConnection`,
        `}`,
        ``,
        `"""The connection type for Test"""`,
        `type TestConnection implements Connection {`,
        `  """Identifies the total count of Test items in the connection."""`,
        `  totalCount: Int`,
        ``,
        `  """A list of TestEdge."""`,
        `  edges: [TestEdge]`,
        ``,
        `  """Information to aid in pagination."""`,
        `  pageInfo: PageInfo!`,
        `}`,
        ``,
        `"""An edge in a TestConnection."""`,
        `type TestEdge implements Edge {`,
        `  """The item at the end of the edge."""`,
        `  node: Test`,
        ``,
        `  """A cursor for use in pagination."""`,
        `  cursor: String`,
        `}`,
        ``,
        `input TestOrder {`,
        `  sort: TestSort`,
        `  direction: OrderDirection`,
        `}`,
        ``,
        `enum TestSort {`,
        `  ID`,
        `}`,
        ``,
        `input TestWhere {`,
        `  id: [IDWhereOperator]`,
        `}`,
        ``,
      ].join('\n'),
    );
  });
});
